--- a/Wpf_core_diploma/MainWindow.xaml
+++ b/Wpf_core_diploma/MainWindow.xaml
@@ -28,7 +28,8 @@
                     <TextBlock x:Name="tbFIO" Text="Иванов Иван Иванович" Foreground="#E6E6E8" FontSize="15"/>
 
                 </StackPanel>
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Width="200" Margin="25" Visibility="Visible" >
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Width="200" 
+                            Margin="25" Visibility="Visible" >
                     <Button x:Name="btRegister" Width="100" Content="Sing up"
                             Click="ClSingUp"
                             Background="#3C3C40" Foreground="#E6E6E8" >
