--- a/Wpf_core_diploma/MainWindow.xaml
+++ b/Wpf_core_diploma/MainWindow.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Wpf_core_diploma"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800" MinHeight="450" MinWidth="800">
-    <Grid Background="#222226">
+        Title="ГБОУ СОШ с.Красный Яр" Height="450" Width="800" MinHeight="450" MinWidth="800">
+    <Grid >
         <Grid.RowDefinitions>
             <RowDefinition Height="0.25*"/>
             <RowDefinition/>
@@ -18,21 +18,24 @@
                 <ColumnDefinition Width="269*"/>
             </Grid.ColumnDefinitions>
             <Grid Grid.Column="0">
-                
+                <Image Source="/Resources/dw1.png" Margin="5"/>
+
             </Grid>
             
 
             <Grid Grid.Column="2">
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Visibility="Hidden">
-
-                    <TextBlock x:Name="tbFIO" Text="Иванов Иван Иванович" Foreground="#E6E6E8" FontSize="15"/>
+                <!--User-->
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Visibility="Visible">
+                    <Image Source="{Binding image}"/>
+                    <TextBlock x:Name="tbFIO" Text="Иванов Иван Иванович" Visibility="Collapsed"/>
 
                 </StackPanel>
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Width="200" 
-                            Margin="25" Visibility="Visible" >
+                <!--кнопки-->
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center"
+                            Height="37" Visibility="Visible" >
                     <Button x:Name="btRegister" Width="100" Content="Sing up"
-                            Click="ClSingUp"
-                            Background="#3C3C40" Foreground="#E6E6E8" >
+                            Click="ClSingUp" Margin="2"
+                            >
                         <Button.Resources>
                             <Style TargetType="Border"
 >
@@ -42,8 +45,7 @@
                     </Button>
 
                     <Button x:Name="btLogin" Width="100" Content="Sing in" 
-                            Background="#0070E0" Foreground="#E6E6E8" 
-                            Click="ClSingIn"
+                            Click="ClSingIn" Margin="2"
                             >
                         <Button.Resources>
                             <Style TargetType="Border">
