--- a/Wpf_core_diploma/Pages/pgListView.xaml
+++ b/Wpf_core_diploma/Pages/pgListView.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Wpf_core_diploma.Pages.PgWelcomes"
+﻿<Page x:Class="Wpf_core_diploma.Pages.pgListView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,17 +6,11 @@
       xmlns:local="clr-namespace:Wpf_core_diploma.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="PgWelcomes"
-      
-      >
+      Title="pgListView">
 
     <Grid>
-        <StackPanel Orientation="Vertical" HorizontalAlignment="Center" Width="500">
-            <TextBlock  HorizontalAlignment="Center" >
-                Добро пожаловать
-            </TextBlock>
-            
-        </StackPanel>
-
+        <TextBlock>
+            страница для данных
+        </TextBlock>
     </Grid>
 </Page>
