--- a/Wpf_core_diploma/Window/WdAuthorization.xaml
+++ b/Wpf_core_diploma/Window/WdAuthorization.xaml
@@ -5,44 +5,43 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Wpf_core_diploma.Window"
         mc:Ignorable="d"
-        Title="WdAuthorization" Height="500" Width="810" MinHeight="500" MinWidth="810">
-    <Grid Background="#222226">
+        Title="Авторизация" Height="500" Width="450" MinHeight="500" MinWidth="450"
+        
+        >
+    <Grid >
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="60"/>
         </Grid.RowDefinitions>
         <Grid Grid.Row="2">
-            <TextBlock MouseUp="xws" Text="Регистрация" Foreground="#0070E0"
+            <TextBlock MouseUp="xws" Text="Регистрация"
                            FontSize="20" HorizontalAlignment="Right" 
                            Margin="0,20,10,10"                           
                            />
         </Grid>
         <Grid Grid.Row="0">
             <StackPanel Orientation="Vertical" HorizontalAlignment="Center">
-                <TextBlock Text="Авторизация" FontSize="30" Foreground="#E6E6E8"/>
+                <TextBlock Text="Авторизация" FontSize="30" />
             </StackPanel>
         </Grid>
         <Grid Grid.Row="1">
-            <StackPanel Orientation="Vertical" HorizontalAlignment="Center" Margin="250,83,250,0">
-                <TextBlock Text="Login" FontSize="25" Foreground="#E6E6E8"/>
+            <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment ="Center">
+                <TextBlock Text="Login" FontSize="25" />
                 <TextBox x:Name="TbLogin" FontSize="25" Width ="300" 
-                         Foreground="White" BorderBrush="#737373"
-                         Background="#171717"
+                         
                          HorizontalAlignment="Left"
                         
                          />
-                <TextBlock Text="Password" FontSize="25" Foreground="#E6E6E8"/>
+                <TextBlock Text="Password" FontSize="25" />
 
                 <StackPanel >
 
                     <TextBox x:Name="tbPassword" FontSize="25" Width="300" 
-                                 Visibility="Collapsed" Background="#171717"
-                                 Foreground="White" BorderBrush="#737373" 
+                                 Visibility="Collapsed"  
                                  />
                     <PasswordBox x:Name="pbPassword" FontSize="25" Width="300" 
-                                 Visibility="Visible" Background="#171717"
-                                 Foreground="White" BorderBrush="#737373"
+                                 Visibility="Visible" 
                                  
                                  />
 
@@ -50,15 +49,15 @@
 
                 <CheckBox Name="chVisPass" Checked="showPassChecked" Unchecked="hidePassChecked" 
                               Content="Показать пароль" HorizontalAlignment="Center" FontSize="17" 
-                              Foreground="#E6E6E8"/>
+                              />
                 <Grid Height="62">
                     <Button x:Name="btSingIN" HorizontalAlignment="Left" 
                                 Height="35"
                                 Click="btRegistr" 
                                 Margin="10,17,0,10"
                         Content="Sing In" 
-                        FontSize="20" Width="100"  Background="#0070E0"
-                        Foreground="#E6E6E8">
+                        FontSize="20" Width="100"  
+                        >
                         <Button.Resources>
                             <Style TargetType="Border">
                                 <Setter Property="CornerRadius" Value="15"/>
