--- a/Wpf_core_diploma/App.xaml
+++ b/Wpf_core_diploma/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="Wpf_core_diploma.App"
+﻿<Application x:Class="DIPloma.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Wpf_core_diploma"
+             xmlns:local="clr-namespace:DIPloma"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
