--- a/Wpf_core_diploma/Pages/PgWelcomes.xaml
+++ b/Wpf_core_diploma/Pages/PgWelcomes.xaml
@@ -1,9 +1,9 @@
-﻿<Page x:Class="Wpf_core_diploma.Pages.PgWelcomes"
+﻿<Page x:Class="DIPloma.Pages.PgWelcomes"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:Wpf_core_diploma.Pages"
+      xmlns:local="clr-namespace:DIPloma.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="PgWelcomes"
