--- a/Wpf_core_diploma/Window/WdRegistration.xaml
+++ b/Wpf_core_diploma/Window/WdRegistration.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="Wpf_core_diploma.Window.WdRegistration"
+﻿<Window x:Class="DIPloma.Window.WdRegistration"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Wpf_core_diploma.Window"
+        xmlns:local="clr-namespace:DIPloma.Window"
         mc:Ignorable="d"
         Title="Регистрация" Height="500" Width="800" MinHeight="500" MinWidth="800">
     <Grid>
