--- a/Wpf_core_diploma/App.xaml
+++ b/Wpf_core_diploma/App.xaml
@@ -4,6 +4,15 @@
              xmlns:local="clr-namespace:DIPloma"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <Style x:Key="font">
+            <Setter Property="TextElement.FontSize" Value="25"/>
+            <Setter Property="TextElement.FontFamily" Value="Inter"/>
+        </Style>
+        <Style x:Key="ButtonStyle" TargetType="Button">
+            <Setter Property="Background" Value="#0070E0" />
+            <Setter Property="Foreground" Value="White" />
+            <Setter Property="BorderBrush" Value="White" />
+            <Setter Property="FontSize" Value="15"/>
+        </Style>
     </Application.Resources>
 </Application>
