--- a/Wpf_core_diploma/Window/WdAuthorization.xaml
+++ b/Wpf_core_diploma/Window/WdAuthorization.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:DIPloma.Window"
         mc:Ignorable="d"
         Title="Авторизация" Height="500" Width="450" MinHeight="500" MinWidth="450"
-        
+        Style="{StaticResource font}"
         >
     <Grid >
         <Grid.RowDefinitions>
@@ -14,33 +14,28 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="60"/>
         </Grid.RowDefinitions>
-        <Grid Grid.Row="2">
-            <TextBlock MouseUp="xws" Text="Регистрация"
-                           FontSize="20" HorizontalAlignment="Right" 
-                           Margin="0,20,10,10"                           
-                           />
-        </Grid>
+        
         <Grid Grid.Row="0">
-            <StackPanel Orientation="Vertical" HorizontalAlignment="Center">
-                <TextBlock Text="Авторизация" FontSize="30" />
+            <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
+                <TextBlock Text="Авторизация"/>
             </StackPanel>
         </Grid>
         <Grid Grid.Row="1">
             <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment ="Center">
-                <TextBlock Text="Login" FontSize="25" />
-                <TextBox x:Name="TbLogin" FontSize="25" Width ="300" 
+                <TextBlock Text="Login"/>
+                <TextBox x:Name="TbLogin" Width ="300" 
                          
                          HorizontalAlignment="Left"
                         
                          />
-                <TextBlock Text="Password" FontSize="25" />
+                <TextBlock Text="Password"/>
 
                 <StackPanel >
 
-                    <TextBox x:Name="tbPassword" FontSize="25" Width="300" 
+                    <TextBox x:Name="tbPassword"  Width="300" 
                                  Visibility="Collapsed"  
                                  />
-                    <PasswordBox x:Name="pbPassword" FontSize="25" Width="300" 
+                    <PasswordBox x:Name="pbPassword" Width="300" 
                                  Visibility="Visible" 
                                  
                                  />
@@ -48,15 +43,17 @@
                 </StackPanel>
 
                 <CheckBox Name="chVisPass" Checked="showPassChecked" Unchecked="hidePassChecked" 
-                              Content="Показать пароль" HorizontalAlignment="Center" FontSize="17" 
+                              Content="Показать пароль" HorizontalAlignment="Center" FontSize="25" 
+                              Margin="5"
                               />
                 <Grid Height="62">
                     <Button x:Name="btSingIN" HorizontalAlignment="Left" 
                                 Height="35"
                                 Click="btRegistr" 
                                 Margin="10,17,0,10"
+                                Style="{StaticResource ButtonStyle}"
                         Content="Sing In" 
-                        FontSize="20" Width="100"  
+                        Width="100"  
                         >
                         <Button.Resources>
                             <Style TargetType="Border">
@@ -70,6 +67,12 @@
 
 
             </StackPanel>
+        </Grid>
+        <Grid Grid.Row="2">
+            <TextBlock MouseUp="xws" Text="Регистрация"
+                           HorizontalAlignment="Right" 
+                           Margin="0,20,10,10"                           
+                           />
         </Grid>
     </Grid>
 </Window>
