--- a/Wpf_core_diploma/MainWindow.xaml
+++ b/Wpf_core_diploma/MainWindow.xaml
@@ -33,18 +33,8 @@
                 <!--кнопки-->
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center"
                             Height="37" Visibility="Visible" >
-                    <Button x:Name="btRegister" Width="100" Content="Sing up"
-                            Click="ClSingUp" Margin="2"
-                            >
-                        <Button.Resources>
-                            <Style TargetType="Border"
->
-                                <Setter Property="CornerRadius" Value="15"/>
-                            </Style>
-                        </Button.Resources>
-                    </Button>
-
-                    <Button x:Name="btLogin" Width="100" Content="Sing in" 
+                    <Button x:Name="btLogin" Width="100" Content="Вход"
+                            Style="{StaticResource ButtonStyle}"
                             Click="ClSingIn" Margin="2"
                             >
                         <Button.Resources>
