--- a/Wpf_core_diploma/Window/WdAuthorization.xaml
+++ b/Wpf_core_diploma/Window/WdAuthorization.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DIPloma.Window"
         mc:Ignorable="d"
-        Title="Авторизация" Height="500" Width="450" MinHeight="500" MinWidth="450"
+        Title="Авторизация" Height="500" Width="450" MinHeight="500" MinWidth="450" MaxHeight="500" MaxWidth="450"
         Style="{StaticResource font}"
         >
     <Grid >
@@ -25,9 +25,7 @@
                 <StackPanel Margin="5">
                 <TextBlock Text="Login"/>
                 <TextBox x:Name="TbLogin" Width ="300" 
-                         
                          HorizontalAlignment="Left"
-                        
                          />
                 </StackPanel>
 
@@ -74,7 +72,8 @@
         <Grid Grid.Row="2">
             <TextBlock MouseUp="xws" Text="Регистрация"
                            HorizontalAlignment="Right" 
-                           Margin="0,20,10,10" FontSize="20"                           
+                           Margin="0,20,10,10"
+                            Style="{StaticResource textFocus}"
                            />
         </Grid>
     </Grid>
