--- a/Wpf_core_diploma/Pages/PgWelcomes.xaml
+++ b/Wpf_core_diploma/Pages/PgWelcomes.xaml
@@ -7,6 +7,7 @@
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="PgWelcomes"
+      Style="{StaticResource font}"
       
       >
 
@@ -15,7 +16,7 @@
             <TextBlock  HorizontalAlignment="Center" >
                 Добро пожаловать
             </TextBlock>
-            
+            <Button Content="Далее" Style="{StaticResource ButtonStyle}"/>
         </StackPanel>
 
     </Grid>
