--- a/Wpf_core_diploma/Window/WdRegistrationTeacher1.xaml
+++ b/Wpf_core_diploma/Window/WdRegistrationTeacher1.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DIPloma.Window"
         mc:Ignorable="d"
-        Title="WdRegistrationTeacher1" Height="450" Width="800"
+        Title="Регистрация учителей" Height="450" Width="800"
         Style="{StaticResource font}"
         >
     
