del DataBase & maket

--- a/Wpf_core_diploma/MainWindow.xaml
+++ b/Wpf_core_diploma/MainWindow.xaml
@@ -58,9 +58,9 @@
                 </StackPanel>
             </Grid>
         </Grid>
-        <Grid Grid.Row="1">
-            <Image Source="/Resources/1675461282_gas-kvas-com-p-ot-mikrosoft-fonovie-risunki-17 1.png" Stretch="UniformToFill"  />
-            <Frame x:Name="FrMain" Margin="50" >
+        <Grid Grid.Row="1" >
+            <Image Source="/Resources/1675461282_gas-kvas-com-p-ot-mikrosoft-fonovie-risunki-17.jpg" Stretch="UniformToFill"  />
+            <Frame x:Name="FrMain" Margin="10 10 10 10 "  >
 
             </Frame>
         </Grid>
