--- a/Wpf_core_diploma/Pages/lvAppMain.xaml
+++ b/Wpf_core_diploma/Pages/lvAppMain.xaml
@@ -67,13 +67,16 @@
                 <SolidColorBrush Color="#7C7C7C" Opacity="0.5"/>
             </Border.Background>
 
-            <ListView x:Name="lvMain" Background="Transparent" Margin="10" BorderBrush="Transparent">
+            <ListView x:Name="lvMain"  
+                      Background="Transparent" Margin="10" BorderBrush="Transparent">
 
                 <ListView.ItemContainerStyle>
                     <Style TargetType="ListViewItem">
                         <Setter Property="HorizontalAlignment" Value="Center"/>
                         <Setter Property="Margin"  Value="5"/>
+                        <EventSetter Event='MouseDoubleClick' Handler='HandleDoubleClick'/>
                     </Style>
+                    
                 </ListView.ItemContainerStyle>
 
                 <ListView.ItemsPanel>
