--- a/Wpf_core_diploma/MainWindow.xaml
+++ b/Wpf_core_diploma/MainWindow.xaml
@@ -17,8 +17,8 @@
         <Grid Grid.Row="0" Background="#022D73">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="94"/>
-                <ColumnDefinition Width="167*"/>
-                <ColumnDefinition Width="143*"/>
+                <ColumnDefinition/>
+                <ColumnDefinition Width="414"/>
             </Grid.ColumnDefinitions>
             <Grid Grid.Column="0">
                 <Image Source="/Resources/dw1.png" Margin="5"/>
@@ -32,20 +32,20 @@
                 <StackPanel Orientation="Horizontal"  HorizontalAlignment="Center" 
                             VerticalAlignment="Center" Visibility="Visible">
                     <!--{Binding PhotoUsers,  TargetNullValue={StaticResource photo}}-->
-                    <Ellipse Width="100" Visibility="Collapsed" 
+                    <Ellipse x:Name="elImage" Width="100" Visibility="Visible" 
                              Height="100">
                         <Ellipse.Fill>
-                            <ImageBrush ImageSource="/Resources/msedge_O3xG2PAYzg.png" Stretch="UniformToFill" />
+                            <ImageBrush x:Name="ibImage" ImageSource="{Binding PhotoUsers,  TargetNullValue={StaticResource photo}}" Stretch="UniformToFill" />
                         </Ellipse.Fill>
                     </Ellipse>
                     <TextBlock x:Name="tbFIO" Text="Иванов Иван Иванович" VerticalAlignment="Center" Margin="5"
                                Foreground="#ffffff"
-                               Visibility="Collapsed" />
+                               Visibility="Visible" />
 
                 </StackPanel>
                 <!--кнопки-->
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Visibility="Visible" Height="87" >
-                    <Button Visibility="Visible" x:Name="btLogin" Width="167" Content="Вход"
+                    <Button Visibility="Collapsed" x:Name="btLogin" Width="167" Content="Вход"
                             Style="{StaticResource ButtonStyle}"
                             Click="ClSingIn" Margin="2" Height="45" 
                             >
