--- a/Wpf_core_diploma/App.xaml
+++ b/Wpf_core_diploma/App.xaml
@@ -1,14 +1,15 @@
 ﻿<Application x:Class="DIPloma.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:DIPloma"
-             StartupUri="MainWindow.xaml">
+             StartupUri="MainWindow.xaml"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             >
     <Application.Resources>
         <Style x:Key="font">
             <Setter Property="TextElement.FontSize" Value="25"/>
             <Setter Property="TextElement.FontFamily" Value="Inter"/>
         </Style>
-        
+
         <Style x:Key="fontTitle">
             <Setter Property="TextElement.FontSize" Value="25"/>
             <Setter Property="TextElement.FontFamily" Value="Inter"/>
@@ -18,13 +19,13 @@
         <Style x:Key="ButtonStyle" TargetType="Button">
             <Setter Property="Background" Value="#0070E0" />
             <Setter Property="Foreground" Value="White" />
-            
+
             <Setter Property="FontSize" Value="20"/>
         </Style>
         <Style x:Key="ButtonRadius" TargetType="Border">
             <Setter Property="CornerRadius" Value="15"/>
         </Style>
-        
+
         <!--textFocus-->
         <Style x:Key="textFocus" TargetType="TextBlock">
             <Setter Property="Foreground" Value="#0070E0" />
@@ -32,14 +33,13 @@
         </Style>
         <!--imageDefold-->
         <BitmapImage x:Key="photo" UriSource="/Resources/msedge_O3xG2PAYzg.png"/>
-        
-        <!--MouseDoubleClick-->
-    
-        
+
+
         
     </Application.Resources>
-    
-
 </Application>
+<!--
+    <
+    -->
     
     
